Merged: Squashed multiple commits.

Merged: [debugger] fix switch block source positions.
Revision: 09de9969ccb9bc3bbd667788afad665b309d02f5

Merged: [debugger] correctly find inner function scope.
Revision: 62b6dd194216e734bbaf98bb144a87bd149a94f5

TBR=hablich@chromium.org
BUG=chromium:696202,v8:6085
LOG=N
NOTRY=true
NOPRESUBMIT=true
NOTREECHECKS=true

Change-Id: I1723918e5d7ac4fd174c4d1ec83d2a49cd858c8b
Reviewed-on: https://chromium-review.googlesource.com/456216
Reviewed-by: Yang Guo <yangguo@chromium.org>
Cr-Commit-Position: refs/branch-heads/5.7@{#146}
Cr-Branched-From: 975e9a320b6eaf9f12280c35df98e013beb8f041-refs/heads/5.7.492@{#1}
Cr-Branched-From: 8d76f0e3465a84bbf0bceab114900fbe75844e1f-refs/heads/master@{#42426}